...
          >Log Out</Button>
        </View>
      );
    }

    return (
      <View testID="TeamModal" style={styles.container}>
        <View style={[styles.nav, Platform.OS === 'android' ? styles.androidNav : null]}>
          <Text style={styles.header}>Select a team</Text>
        </View>
        <SelectTeamScreen isModal />
      </View>
    );
...
